cros: Fix wallpaper improper resizing issue

The "current_wallpaper_.reset()" call in |ReloadWallpaper| was deleted
earlier since it was believed to be useless, but without it, the
|WallpaperIsAlreadyLoaded| check returns true which prevents wallpaper
reloading. This results in a bug when the wallpaper has special shape
(e.g. square) and it must be reloaded in order to fit a different
display size.

Also modified the |WallpaperBlurDisabledByPolicy| test since the author
of the test was not aware that DEVCIE wallpaper only exists in login
screen so most parts of the test are not meaningful.

Bug: 831794
Change-Id: I7e2c78157eacc9034bb39de1a7a00729f8a26ec2
Reviewed-on: https://chromium-review.googlesource.com/1008604
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550271}