ash/wallpaper/wallpaper_controller.cc
@@ -1743,6 +1743,7 @@ void WallpaperController::OnWallpaperDecoded(
 }
 
 void WallpaperController::ReloadWallpaper(bool clear_cache) {
+  current_wallpaper_.reset();
   if (clear_cache)
     wallpaper_cache_map_.clear();
 
